Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,3 +8,5 @@
 [submit]
 [access "refs/heads/*"]
 	label-Verified = -1..+1 group gerrit-trusted-contributors
+[access "refs/heads/stable-3.9"]
+	delete = group google/gerritcodereview-maintainers@googlegroups.com
